--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ h3 {
   margin-bottom: 10px;
 }
 
+#status-message {
+  text-align: center;
+  margin-bottom: 20px;
+  color: red;
+}
+
 #draw-area {
   width: 50%;
   height: 50%;
